data/derived/fa15/progs/unify/prog3515.ml.out
Characters 29-41:
  let fixpoint (f,b) = wwhile ((f, f < 100),b);;
                               ^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
